--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.7.1",
     "react-image-gallery": "^1.2.11",
     "react-images-viewer": "^1.7.1",
+    "react-pdf": "^7.7.0",
     "react-player": "^2.9.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.0.2",
