--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^4.7.1",
     "react-image-gallery": "^1.2.11",
     "react-images-viewer": "^1.7.1",
