--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-images-viewer": "^1.7.1",
     "react-pdf": "^7.7.0",
     "react-player": "^2.9.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
